# Empireisgay

./: .dockerignore  .env.example  BUG_REPORT_COMPLETE.md  Dockerfile  NOUS_FIXES.txt  README.md  README.txt  benchmark_results.json  gunicorn.conf.py  pyproject.toml  railway.toml  seed.py  test_bugfixes.py  test_compression.py
.claude/: settings.local.json
.github/workflows/: tests.yml
config/: settings.py
core/ace/: editor.py  engine.py  pipeline.py  tools.py
core/directives/: manager.py
core/evolution/: cycle.py  executor.py
core/knowledge/: __init__.py  graph.py  maintenance.py  quality.py  query.py  resolution.py  schemas.py  search.py
core/lieutenant/: base.py  manager.py  workload.py
core/mcp/: __init__.py  client.py  manager.py
core/memory/: __init__.py  bitemporal.py  compression.py  consolidation.py  embeddings.py  manager.py
core/research/: autoresearcher.py  pipeline.py
core/routing/: budget.py
core/scheduler/: daemon.py  health.py  jobs.py
core/search/: __init__.py  github.py  hackernews.py  huggingface.py  papers_with_code.py  scraper.py  semantic_scholar.py  sweep.py  tavily.py  (+1 more)
data/: mcp_test.txt
db/: engine.py  migrations.py  models.py
docs/: PERFORMANCE_FIXES.md  PHASE1_CONTROL_PLANE_SPEC.md  ROADMAP.md  SCALING.md  TARGET_ARCHITECTURE.md
llm/: __init__.py  anthropic.py  base.py  cache.py  openai.py  router.py
research/: ai_agents_landscape_2026.md  empire_architecture.md  nous_hermes_autonomous_ai.md
tests/: benchmark.py  benchmark_knowledge.py  test_dashboard_local_only.py  test_docs_roadmap.py  test_god_panel_local_only.py  test_memory_routes_local_only.py  test_sqlite_write_serialization.py  test_system_functional_local.py
utils/: capacity.py  circuit_breaker.py
web/: app.py
(+35 files in other folders)
