[project]
name = "empire"
version = "0.1.0"
description = "Self-upgrading multi-agent AI system"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "apscheduler>=3.10",
    "anthropic>=0.40",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "ddgs>=8.0",
    "trafilatura>=2.0",
    "feedparser>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
empire = "web.app:main"
empire-migrate = "db.migrations:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "db*", "llm*", "core*", "web*", "cli*", "utils*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
